--- a/wwwroot/app/app.component.html
+++ b/wwwroot/app/app.component.html
@@ -7,4 +7,4 @@
             <home-page></home-page>         
         </div>     
     </div> 
-</div>export class AppComponent {{'{'}} {{'}'}}
+</div>
