--- a/wwwroot/app/components/navbar/navbar.component.html
+++ b/wwwroot/app/components/navbar/navbar.component.html
@@ -30,4 +30,4 @@
                 </ul>         
             </div>     
         </div>
-    </div> export class NavBarComponent {{'{'}} {{'}'}}
+    </div>
